--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="img"><img src="img/FIFA-23-capa.jpg"  width="530" height="320"></div> <div class="inf"><span style="color: rgb(49, 76, 97);"><h2>Fifa entra em promoção esa semana não perca de 299,99 R$ por 78,00 R$!! </h2></span></div>
     <div class="img2"><img src="img/grand-theft-auto-5-logo-54E30512F6-seeklogo.com.png"  width="300" height="200"></div> <div class="inf2"><Span style="color: rgb(214, 114, 56);"><h3>O jogo mais vendido!!</h3></Span></div>
     <div class="img3"><img src="img/1664a22b13e4fa07a3b8b89126e8f63848c6031d568a00769d1d7b312c695a63.avif" width="300" height="200" ></div><div class="inf3"><Span style="color: rgb(10, 175, 73);"><h3>E se não quiser gasta muito tem esse jogo para você!!</h3></Span></div>
+    <div class="reichikita"><img src="img/Reiplush.webp" height="320" width="530"></div>
 </body>
 
 </html>
