--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </main>
     </header>
 
-    <div class="img"><img src="img/FIFA-23-capa.jpg"  width="530" height="320"></div> <div class="inf"><span style="color: rgb(49, 76, 97);"><h2>Fifa entra em promoção esa semana não perca de 299,99 R$ por 78,00 R$!! </h2></span></div>
-    <div class="img2"><img src="img/grand-theft-auto-5-logo-54E30512F6-seeklogo.com.png"  width="300" height="200"></div> <div class="inf2"><Span style="color: rgb(214, 114, 56);"><h3>O jogo mais vendido!!</h3></Span></div>
+    <div class="img"><img src="img/DefenselessObedientBluebird-size_restricted.gif"  width="530" height="320"></div> <div class="inf"><span style="color: rgb(49, 76, 97);"><h2>Fifa entra em promoção esa semana não perca de 299,99 R$ por 78,00 R$!! </h2></span></div>
+    <div class="img2"><img src="img/giphy.gif"  width="300" height="200"></div> <div class="inf2"><Span style="color: rgb(214, 114, 56);"><h3>O jogo mais vendido!!</h3></Span></div>
     <div class="img3"><img src="img/1664a22b13e4fa07a3b8b89126e8f63848c6031d568a00769d1d7b312c695a63.avif" width="300" height="200" ></div><div class="inf3"><Span style="color: rgb(10, 175, 73);"><h3>E se não quiser gasta muito tem esse jogo para você!!</h3></Span></div>
     <div class="img4"><a href="https://www.sonicthehedgehog.com/"><img src="img/FireShot_Capture_038_-__b__-_URGENTE_-_1500chan.org-removebg-preview (1).png" width="250" height="250"></a></div>
     <div class="img5"><a href="https://www.google.com/search?q=pente+para+carecas&rlz=1C1ONGR_pt-PTBR1003BR1003&oq=pente+&aqs=chrome.0.69i59j69i64j69i57j0i433i512j0i512j0i433i512j0i512j69i60.2451j0j7&sourceid=chrome&ie=UTF-8#fpstate=ive&vld=cid:bfdc6a02,vid:CZKc-mrT8vg"><img src="img/istockphoto-969274164-170667a-removebg-preview.png" width="200" height="200"></a></div>
