--- a/index.html
+++ b/index.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <style></style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="2 pag.css" type="text/css">
     <title>Games</title>
-</head>
-
+ </head>
 <body>
-    <header>
-        <main>
+    <div class="container">
+        <header>
             <div class="header-1">
                 <div class="center">
                     <div class="logo"><a href="#"><img src="img/1451303.png" width="90px" height="90px"></a></div>
-                    <!--logo-->
                     <div class="menu">
                         <a href="2 pag.html">Informações</a>
                         <a href="3 pag.html">Destaques</a>
                         <a href="#">Lista de Desejos</a>
                         <a href="#">Editar Perfil</a>
-                    </div><!--menu-->
-                </div><!--center-->
-            </div><!--header-1-->
+                    </div>
+                </div>
+            </div>
+        </header>
 
-
-        </main>
-    </header>
-
-    <div class="img"><img src="img/DefenselessObedientBluebird-size_restricted.gif"  width="530" height="320"></div> <div class="inf"><span style="color: rgb(49, 76, 97);"><h2>Fifa entra em promoção esa semana não perca de 299,99 R$ por 78,00 R$!! </h2></span></div>
-    <div class="img2"><img src="img/giphy.gif"  width="300" height="200"></div> <div class="inf2"><Span style="color: rgb(214, 114, 56);"><h3>O jogo mais vendido!!</h3></Span></div>
-    <div class="img3"><img src="img/1664a22b13e4fa07a3b8b89126e8f63848c6031d568a00769d1d7b312c695a63.avif" width="300" height="200" ></div><div class="inf3"><Span style="color: rgb(10, 175, 73);"><h3>E se não quiser gasta muito tem esse jogo para você!!</h3></Span></div>
-    <div class="img4"><a href="https://www.sonicthehedgehog.com/"><img src="img/FireShot_Capture_038_-__b__-_URGENTE_-_1500chan.org-removebg-preview (1).png" width="250" height="250"></a></div>
-    <div class="img5"><a href="https://www.google.com/search?q=pente+para+carecas&rlz=1C1ONGR_pt-PTBR1003BR1003&oq=pente+&aqs=chrome.0.69i59j69i64j69i57j0i433i512j0i512j0i433i512j0i512j69i60.2451j0j7&sourceid=chrome&ie=UTF-8#fpstate=ive&vld=cid:bfdc6a02,vid:CZKc-mrT8vg"><img src="img/istockphoto-969274164-170667a-removebg-preview.png" width="200" height="200"></a></div>
-    <div class="gif"><a href="http://marvelstudios.site/"><img src="img/394660f927d65eff2baf0f1579c699d4.gif" width="150" height="150"></a></div>
-    <div class="inf4"><Span style="color: aliceblue;"><h4>Site parceiro :D</h4></Span></div>
+        <div class="main-content">
+            <div class="image-item">
+                <img src="img/DefenselessObedientBluebird-size_restricted.gif" alt="Imagem 1">
+                <div class="image-caption"><span style="color:  rgb(197, 197, 173);"><h2>Fifa entra em promoção esta semana! Não perca de 299,99 R$ por 78,00 R$!!</h2><span></span></div>
+            </div>
+            <div class="image-item">
+                <img src="img/giphy.gif" alt="Imagem 2">
+                <div class="image-caption2"><span style="color: rgb(197, 197, 173);"><h3>O jogo mais vendido GTA V!!</h3></span></div>
+            </div>
+            <div class="image-item">
+                <img src="img/1664a22b13e4fa07a3b8b89126e8f63848c6031d568a00769d1d7b312c695a63.avif" alt="Imagem 3" width="50%">
+                <div class="image-caption3"><span style="color:  rgb(197, 197, 173);"><h3>E se não quiser gastar muito, tem esse jogo para você!!</h3></span></div>
+            </div>
+        </div>
+    </div>
 </body>
-
 </html>
