--- a/3 pag.html
+++ b/3 pag.html
@@ -14,7 +14,10 @@
         <main>
             <div class="header-1">
                 <div class="center">
-                    <div class="logo"><a href="index.html"><img src="img/1451303.png" width="90px" height="90px"></a>
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="img/1451303.png" width="90px" height="90px">
+                        </a>
                     </div><!--logo-->
                     <div class="menu">
                         <a href="2 pag.html">Informações</a>
@@ -28,15 +31,15 @@
         </main>
     </header>
     <div class="h1">
-       <span style="color: azure;"> <h1>Final do VCT Américas 2023: LOUD bate NRG e é campeã inédita</h1></span>
+        <h1>Final do VCT Américas 2023: LOUD bate NRG e é campeã inédita</h1>
     </div>
-    <div class="img"><img src="img/vct-americas-2023-loud-campea-trofeu.webp" width="600" height="350"></div>
-    <div class="inf"><span style="color: rgb(197, 197, 173);">
-            <h2>A LOUD é campeã inaugural do VCT Américas 2023. O time brasileiro bateu a NRG, dos EUA, por 3 a 0 neste
-                domingo para conquistar o título americano de Valorant. Com a conquista, a equipe de Matias "Saadhak" e
-                Erick "aspas" vai direto aos playoffs do Valorant Masters Tokyo.</h2>
-        </span></div>
-<div class="inf2">Quer saber mais entre em <span style="color: green;"><a href ="https://ge.globo.com/">https://ge.globo.com/</a></span></div>
+    <div class="img"><img src="img/vct-americas-2023-loud-campea-trofeu.webp" alt="Imagem de destaque"></div>
+    <div class="inf">
+        <h2>A LOUD é campeã inaugural do VCT Américas 2023. O time brasileiro bateu a NRG, dos EUA, por 3 a 0 neste
+            domingo para conquistar o título americano de Valorant. Com a conquista, a equipe de Matias "Saadhak" e
+            Erick "aspas" vai direto aos playoffs do Valorant Masters Tokyo.</h2>
+    </div>
+    <div class="inf2">Quer saber mais? <a href="https://ge.globo.com/" style="color: green;">Clique aqui</a></div>
 </body>
 
 </html>
